k8s/ingress.yaml
# SPDX-License-Identifier: MIT
# Copyright (c) 2026 Kesavan Mariappan (kesavan-mariappan-devops)
# https://github.com/kesavan-mariappan-devops/k8s-istio-platform

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mesh-api-ingress
  namespace: backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-istio-platform.backend.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: mesh-api
                port:
                  number: 5000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: mesh-api
                port:
                  number: 5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mesh-ui-ingress
  namespace: frontend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: k8s-istio-platform.frontend.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mesh-ui
                port:
                  number: 80
